<resources>
    <string name="app_name">Appriori</string>


    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="senha">Senha: </string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="esqueci">Esqueci minha senha</string>
    <string name="title_activity_cadastrar">CadastrarActivity</string>
    <string name="nome">Nome: </string>
    <string name="email">E-mail: </string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_esqueci">EsqueciActivity</string>
    <string name="enviar">Enviar</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="local">Local</string>
    <string name="chamado">Abrir Chamado</string>
    <string name="acompanhar">Acompanhar</string>
    <string name="title_activity_chamado">ChamadoActivity</string>
    <string name="title_activity_acompanhar">AcompanharActivity</string>
    <string name="equipamento">Equipamento</string>
    <string name="descricao">Descrição</string>
    <string name="titulochamado">Chamado</string>
    <string name="acompanhamento">Acompanhamento</string>
    <string name="dataabertura">Data Início</string>
    <string name="dataconclucao">Data Fim</string>
    <string name="situacao">Situação</string>
    <string name="confirma_senha">Confirmar senha</string>
    <string name="cancelar2">Cancelar</string>
    <string name="tituloCadastro">Cadastrar Usuário</string>
    <string name="configuracoes">Configurações</string>
    <string name="title_activity_configuracoes">ConfiguracoesActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="tituloConfg">Configurações</string>
    <string name="alteraSenha">Alterar</string>
    <string name="title_activity_altera_senha">AlteraSenhaActivity</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="confirmar_nova_senha">Confirmar Nova Senha</string>
    <string name="titulo_altera_senha">Alterar Senha</string>
    <string name="senha_atual">Senha Atual</string>
    <string name="descTitulo">Acompanhe os chamados que você abriu</string>
    <string name="emailHint">E-mail</string>
    <string name="SenhaHint">Senha</string>
    <string name="hintDescChamado">Descreva o problema</string>
    <string name="descTituloChamado">Registre o chamado para o equipamento</string>
</resources>
