<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fatecriopreto.edu.br.appriori.ConfiguracoesActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_gravity="center|left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloConfg"
            android:id="@+id/txtTitulo"
            android:textSize="40sp"
            android:textColor="@android:color/holo_purple"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:id="@+id/txtNomeDesc"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNome"
            android:editable="true"
            android:textSize="25sp"/>

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/txtEmailDesc"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtEmail"
            android:editable="false"
            android:textSize="25sp"/>



        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senha"
                android:id="@+id/textView3"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/txtSenha"
                android:layout_marginLeft="10dp"
                android:textSize="25sp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alteraSenha"
                android:id="@+id/btnAlteraSenha"
                android:background="@drawable/btn_border"
                android:textColor="@android:color/white"
                android:layout_gravity="right"/>
        </GridLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp" />

    </LinearLayout>
</RelativeLayout>
